<resources>
    <string name="app_name">MyGroceryStore</string>
    <string name="enter_number_label">Enter Number</string>
    <string name="mobile_number_label">Mobile Number (10-digit)</string>
    <string name="continue_label">Continue</string>
    <string name="explore_now">Explore now</string>
    <string name="enter_otp_label">Enter OTP</string>
    <string name="change_label">Change</string>
    <string name="did_not_receive_otp">Didn\'t get the OTP?</string>
    <string name="progress_resend_otp">Resend OTP…</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="login_now_label">Login Now</string>
    <string name="search">Search</string>
    <string name="search_1000_products">Search 1000+ products</string>
    <string name="category">Categories</string>
    <string name="orders">Orders</string>
    <string name="chat">Chat</string>
    <string name="wallet">Wallet</string>
    <string name="write_message_here">Write message here...</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="_0">0</string>
    <string name="reserved_amount">Reserved Amount</string>
    <string name="enter_the_recharge_amount">Enter the recharge amount</string>
    <string name="_1000">+1000</string>
    <string name="_2000">+2000</string>
    <string name="_3000">+3000</string>
    <string name="_4000">+4000</string>
    <string name="add_money">Add Money</string>
    <string name="recharge_history">RECHARGE HISTORY</string>
    <string name="billing_history">BILLING HISTORY</string>
    <string name="reserve_money">RESERVE MONEY</string>
    <string name="weight">200g</string>
    <string name="mrp_52">MRP $52</string>
    <string name="buy_now">Buy Now</string>
    <string name="title">title</string>
    <string name="item_name">Item Name</string>
    <string name="price">Price</string>
    <string name="product_description">Product Description</string>
    <string name="rich_in_anti_oxidants_potatoes_helps_to_reduce_oxidative_stress_and_unwanted_inflammation_in_the_body_great_nature_s_gift_full_with_phytonutrients">Rich in anti-oxidants, Potatoes helps to reduce oxidative stress and unwanted inflammation in the body. Great nature\'s gift full with phytonutrients.</string>
    <string name="add_to_cart">Add To Cart</string>

</resources>
